Header y footer actualizados y responsive desde 320px hasta 1200px, comiendo main de index.

--- a/Secciones/menunoche.html
+++ b/Secciones/menunoche.html
@@ -9,21 +9,28 @@
 </head>
 
 <body>
-    <header>
-        <h1><a href="../index.html">PIZZA PRONTO</a></h1>
-        <div class="time-info">
-            <p class="time-text">Mediodía: Martes a viernes 11 a 14:30hs</p>
-            <p class="time-text">Noche: Lunes a domingo de 19 a 23:30hs</p>
+    <div class="header-conjunto">
+        <header class="header-titulo">
+            <h1><a href="../index.html">PIZZA <strong class="titulo-color-rojo">PRONTO</strong></a></h1>
+
+        </header>
+
+        <div class="header-info-horario">
+            <p class="header-horario">Mediodía: Martes a viernes 11 a 14:30hs</p>
+            <p class="header-horario-noche">Noche: Lunes a domingo de 19 a 23:30hs</p>
         </div>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="./menudia.html">Menú Día</a></li>
-            <li><a href="./menunoche.html">Menú Noche</a></li>
-            <li><a href="./ubicacion.html">Ubicación</a></li>
-            <li><a href="./informacion.html">Informacion</a></li>
-        </ul>
-    </nav>
+
+
+        <nav>
+            <ul>
+                <li><a href="../Secciones/menudia.html" class="btn-color">Menú Día</a></li>
+                <li><a href="../Secciones/menunoche.html" class="btn-color">Menú Noche</a></li>
+                <li><a href="../Secciones/ubicacion.html" class="btn-color">Ubicación</a></li>
+                <li><a href="../Secciones/informacion.html" class="btn-color">Informacion</a></li>
+            </ul>
+        </nav>
+    </div>
+
     <main>
         <article class="menu-img">
             <h2 class="titulo-gris">Menu Noche</h2>
@@ -32,11 +39,24 @@
     </main>
 
     <footer>
-        <p><strong>Teléfono:</strong> 44541306</p>
-        <p><strong>WhatsApp:</strong> 1140413618</p>
-        <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
-        <p><strong>Dirección:</strong> Bolívar 4282</p>
-        <p class="footer-masa">Masa Fresca, Directa al horno!!</p>
+        <div>
+            <p> <strong>Teléfono:</strong> 44541306</p>
+        </div>
+        <div>
+            <img src="../Imagenes/whatsapp.png" class="footer-img-whatsapp">
+            <p><strong>WhatsApp:</strong> 1140413618</p>
+        </div>
+        <div>
+            <img src="../Imagenes/instagram.png">
+            <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
+        </div>
+        <div>
+            <img src="../Imagenes/google maps.webp" >
+            <p><strong>Dirección:</strong> Bolívar 4282</p>
+        </div>
+        <div class="footer-masa">
+            <p>Masa Fresca, Directa al horno!!</p>
+        </div>
     </footer>
 </body>
 
