Compatibilidad en 320px-480px y distinta distibucion a partir de 1200px, nuevo diseño header, nav y footer. resta hacer seccion de informacion.

--- a/Secciones/menudia.html
+++ b/Secciones/menudia.html
@@ -36,6 +36,10 @@
             <h2 class="titulo-gris">Menú Mediodia</h2>
             <img src="../Imagenes/MENU MEDIODIA.jpeg" alt="menu mediodia">
         </article>
+        <article class="menu-img-mobile">
+            <h2 class="titulo-gris">Menú Mediodia</h2>
+            <img src="../Imagenes/menumediodia-mobile.jpeg" alt= "menú mediodia" class="menu-img-mobile">
+        </article>
     </main>
 
     <footer>
