--- a/Secciones/menunoche.html
+++ b/Secciones/menunoche.html
@@ -33,8 +33,12 @@
 
     <main>
         <article class="menu-img">
-            <h2 class="titulo-gris">Menu Noche</h2>
-            <img src="../Imagenes/MENU PIZZA.jpeg" alt="menu noche">
+            <h2 class="titulo-gris">Menú Noche</h2>
+            <img src="../Imagenes/MENU PIZZA.jpeg" alt="menú noche">
+        </article>
+        <article class="menu-img-mobile">
+            <h2 class="titulo-gris">Menú Noche</h2>
+            <img src="../Imagenes/menunoche-mobile.jpeg" alt= "menú noche" class="menu-img-mobile">
         </article>
     </main>
 
