--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </div>
 
-    <main>
+    <main class="main-index">
         <section class="card">
             <img src="./Imagenes/Pizza.webp" alt="Imagen Pizza">
             <div>
