--- a/Secciones/ubicacion.html
+++ b/Secciones/ubicacion.html
@@ -32,17 +32,17 @@
     </div>
 
     <main class="main-ubicacion">
-        <section class="main-mapas">
-            <div class="caja">
-                <h2 class="titulo-gris titulomapas">Encontranos en Google Maps</h2>
-                <div class="mapa-caja">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52496.89674924511!2d-58.60489368438718!3d-34.67853490721574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9c92edc921f%3A0x540656f6a481f9ed!2sPizzer%C3%ADa%20Pronto!5e0!3m2!1ses!2sar!4v1686258221310!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <section>
+            <div class="main-section-ubicacion">
+                <h2>Encontranos en Google Maps</h2>
+                <div>
+                    <iframe class="main-ubicacion-caja" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52496.89674924511!2d-58.60489368438718!3d-34.67853490721574!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc9c92edc921f%3A0x540656f6a481f9ed!2sPizzer%C3%ADa%20Pronto!5e0!3m2!1ses!2sar!4v1686258221310!5m2!1ses!2sar" width="600" height="450" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
-            <div class="caja deliverytitle">
-                <h2 class="titulo-gris">Área de Delivery</h2>
-                <div class="delivery-caja">
-                    <img src="../Imagenes/Delivery area.png" alt="area de delivery">
+            <div class="main-section-ubicacion">
+                <h2>Área de Delivery</h2>
+                <div>
+                    <img class=".main-ubicacion-caja" src="../Imagenes/Delivery area.png" alt="area de delivery">
                 </div>
             </div>
         </section>
