Corrijo algunos errores y finalizo la preentrega N°2

--- a/Secciones/informacion.html
+++ b/Secciones/informacion.html
@@ -31,25 +31,30 @@
         </nav>
     </div>
 
-    <main>
-        <div class="info-box">
+    <main class="main-info">
+        <div>
             <p>TEXTO CON INFORMACIÓN DE ORIGEN, LOS AÑOS TRABAJADOS Y ALGÚN MENSAJE</p>
         </div>
-        <div class="form-box">
-            <h3 class="titulo-gris">Para realizar un pedido especial, rellene el siguiente formulario (30 dias de anticipacion)</h3>
-            <form>
-                <input type="text" class="form-input" placeholder="Nombre" required>
-                <input type="email" class="form-input" placeholder="Mail" required>
-                <input type="tel" class="form-input" placeholder="Teléfono" required>
-                <input type="date" class="form-input" placeholder="Fecha" required>
-                <textarea class="form-textarea" placeholder="Detalle del pedido" required></textarea>
-                <button type="submit" class="form-button">Enviar</button>
-            </form>
+        <div class="main-info-form">
+            <div>
+                <h3 class="main-info-primtext">Para realizar un pedido especial, rellene el siguiente formulario</h3>
+                <h3 class="main-info-segtext">(30 dias de anticipacion)</h3>
+            </div>
+            <div>
+                <form class="main-info-form">
+                    <input type="text" class="form-input" placeholder="Nombre" required>
+                    <input type="email" class="form-input" placeholder="Mail" required>
+                    <input type="tel" class="form-input" placeholder="Teléfono" required>
+                    <input type="date" class="form-input" placeholder="Fecha" required>
+                    <textarea class="form-textarea" placeholder="Detalle del pedido" required></textarea>
+                    <button type="submit" class="main-form-button">Enviar</button>
+                </form>
+            </div>
         </div>
     </main>
 
 
-    <footer>
+    <footer class="footer-info">
         <div>
             <p> <strong>Teléfono:</strong> 44541306</p>
         </div>
@@ -62,7 +67,7 @@
             <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
         </div>
         <div>
-            <img src="../Imagenes/google maps.webp" >
+            <img src="../Imagenes/google maps.webp">
             <p><strong>Dirección:</strong> Bolívar 4282</p>
         </div>
         <div class="footer-masa">
