Realizo la adicion de transicion de animacion en los botones y agrego variables para los colores principales

--- a/Secciones/informacion.html
+++ b/Secciones/informacion.html
@@ -33,7 +33,8 @@
 
     <main class="main-info">
         <div>
-            <p>TEXTO CON INFORMACIÓN DE ORIGEN, LOS AÑOS TRABAJADOS Y ALGÚN MENSAJE</p>
+            <p>Durante dos décadas, Pizza Pronto ha deleitado a los amantes de la comida en Lomas del Mirador con su masa fresca y sabrosas creaciones.</p>
+            <p>Esta pizzería icónica también sirve empanadas, hamburguesas, milanesas, pastas, papas fritas y arroz al mediodía. ¡Una parada obligada para los amantes de la comida italiana!</p>
         </div>
         <div class="main-info-form">
             <div>
