Aplicacion de SEO y Mejora en SASS. Finalizo la tercera Preentrega.

--- a/Secciones/informacion.html
+++ b/Secciones/informacion.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Pronto</title>
+    <meta name="description" content="Informacion Pizza pronto | Pedidos grandes de comida | Servicio de catering comida pizza empanadas | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
+    <title>Pizza Pronto - Informacíon</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
@@ -34,7 +35,7 @@
     <main class="main-info">
         <div>
             <p>Durante dos décadas, Pizza Pronto ha deleitado a los amantes de la comida en Lomas del Mirador con su masa fresca y sabrosas creaciones.</p>
-            <p>Esta pizzería icónica también sirve empanadas, hamburguesas, milanesas, pastas, papas fritas y arroz al mediodía. ¡Una parada obligada para los amantes de la comida italiana!</p>
+            <p>Esta pizzería icónica también sirve empanadas, hamburguesas, milanesas, pastas, papas fritas y arroz al mediodía. ¡Una parada obligada para los amantes de la comida italiana!g</p>
         </div>
         <div class="main-info-form">
             <div>
@@ -48,7 +49,7 @@
                     <input type="tel" class="form-input" placeholder="Teléfono" required>
                     <input type="date" class="form-input" placeholder="Fecha" required>
                     <textarea class="form-textarea" placeholder="Detalle del pedido" required></textarea>
-                    <button type="submit" class="main-form-button">Enviar</button>
+                    <button type="submit" alt="Boton para enviar formulario" class="main-form-button">Enviar</button>
                 </form>
             </div>
         </div>
