--- a/Secciones/menudia.html
+++ b/Secciones/menudia.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Menu Mediodia Pizza pronto | Delivery Mediodia | Comida Mediodia Lomas del mirador / La Tablada | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
     <title>Pizza Pronto - Menú día</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
