--- a/Secciones/menunoche.html
+++ b/Secciones/menunoche.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Pronto - Menú día</title>
+    <meta name="description" content="Menu Noche Pizza pronto | Delivery Noche | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
+    <title>Pizza Pronto - Menú Noche</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 
