--- a/Secciones/ubicacion.html
+++ b/Secciones/ubicacion.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Pizza Pronto Ubicacion | Area Delivery Pizza Pronto | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
     <title>Pizza Pronto - Ubicación</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -50,11 +51,11 @@
 
     <footer>
         <div>
-            <p> <strong>Teléfono:</strong> 44541306</p>
+            <p alt="Telefono 44541306" > <strong>Teléfono:</strong> 44541306</p>
         </div>
         <div>
             <img src="../Imagenes/whatsapp.png" class="footer-img-whatsapp">
-            <p><strong>WhatsApp:</strong> 1140413618</p>
+            <p alt="Whatsapp 1140413618" ><strong>WhatsApp:</strong> 1140413618</p>
         </div>
         <div>
             <img src="../Imagenes/instagram.png">
@@ -62,7 +63,7 @@
         </div>
         <div>
             <img src="../Imagenes/google maps.webp" >
-            <p><strong>Dirección:</strong> Bolívar 4282</p>
+            <p alt="Direccion: bolivar 4282"><strong>Dirección:</strong> Bolívar 4282</p>
         </div>
         <div class="footer-masa">
             <p>Masa Fresca, Directa al horno!!</p>
