Correccion de error visual en boton descripcion.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pizza Pronto</title>
+    <meta name="description" content="Inicio de la pagina web Pizza pronto | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
+    <title>Pizza Pronto | Masa Fresca directa al horno | Pizza al molde | Empanadas al horno</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -23,10 +24,10 @@
 
         <nav>
             <ul>
-                <li><a href="./Secciones/menudia.html" class="btn-color">Menú Día</a></li>
-                <li><a href="./Secciones/menunoche.html" class="btn-color">Menú Noche</a></li>
-                <li><a href="./Secciones/ubicacion.html" class="btn-color">Ubicación</a></li>
-                <li><a href="./Secciones/informacion.html" class="btn-color">Informacion</a></li>
+                <li><a href="./Secciones/menudia.html" alt="Boton Menú Dia"  class="btn-color">Menú Día</a></li>
+                <li><a href="./Secciones/menunoche.html" alt="Boton Menú Noche" class="btn-color">Menú Noche</a></li>
+                <li><a href="./Secciones/ubicacion.html"  alt="Boton Ubicación" class="btn-color">Ubicación</a></li>
+                <li><a href="./Secciones/informacion.html" alt="Boton Informacíon" class="btn-color">Informacion</a></li>
             </ul>
         </nav>
     </div>
