Ultimas Modificaciones. Proyecto final terminado para presentar.

--- a/Secciones/menudia.html
+++ b/Secciones/menudia.html
@@ -32,14 +32,59 @@
         </nav>
     </div>
 
-    <main>
-        <article class="menu-img">
-            <h2 class="titulo-gris">Menú Mediodia</h2>
-            <img src="../Imagenes/MENU MEDIODIA.jpeg" alt="menu mediodia">
+    <main class="menu-main">
+        <article class="menu-main-article">
+            <h2 class="menu-titulo"> MINUTAS</h2>
+            <p><strong>Pollo entero con papas </strong><strong class="strong-verde">$</strong>3200</p>
+            <p><strong>1/2 Pollo con papas </strong><strong class="strong-verde">$</strong>2100</p>
+            <p><strong>1/4 Pollo con papas </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Milanesa napolitana sola </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Milanesa napolitana con fritas </strong><strong class="strong-verde">$</strong>1800</p>
+            <p><strong>Milanesa napolitana especial </strong> (Jamón, Tomate, Huevo Morron y papas) <strong class="strong-verde">$</strong>2100</p>
+            <p> <Strong>Milanesa completa </Strong>(Con panceta, Huevo y fritas) <strong class="strong-verde">$</strong>2100</p>
+            <p><strong>Milanesa completa especial </strong>(Lechuga, Tomate, Aji, Huevo con fritas) <strong class="strong-verde">$</strong>2700</p>
+            <p><strong>Milanesa con fritas o pure </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Milanesa a la fugazzetta con papas </strong><strong class="strong-verde">$</strong>1700</p>
+            <p><strong>Suprema napolitana especial </strong> (Morron, huevo y papas) <strong class="strong-verde">$</strong>2800</p>
+            <p><strong>Suprema napolitana sola </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Suprema napolitana con fritas </strong><strong class="strong-verde">$</strong>1800</p>
+            <p><Strong>suprema napolitana </Strong>  (con panceta, huevo y fritas) <strong class="strong-verde">$</strong>2100</p>
+            <p><strong>Suprema con fritas o pure </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Suprema completa especial </strong>(Lechuga, Tomate, Aji y Huevo) <strong class="strong-verde">$</strong>1700</p>
+            <p><strong>Churrasco con guarnicion </strong><strong class="strong-verde">$</strong>1600</p>
+            <p><strong>Tarta de Jamon, Muzza, Tomate y Huevo </strong><strong class="strong-verde">$</strong>2200</p>
+            <p><strong>Tarta de Atún </strong><strong class="strong-verde">$</strong>2600</p>
+            <p><strong>Tarta de Verdura </strong><strong class="strong-verde">$</strong>2200</p>
         </article>
-        <article class="menu-img-mobile">
-            <h2 class="titulo-gris">Menú Mediodia</h2>
-            <img src="../Imagenes/menumediodia-mobile.jpeg" alt= "menú mediodia" class="menu-img-mobile">
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">PASTAS</h2>
+            <p><strong>Tallarines - Ñoquis - Ravioles</strong></p>
+            <p>Con tuco <strong class="strong-verde">$</strong>1000<br> Con Estofado <strong class="strong-verde">$</strong>1400 <br> </p>
+            <p><strong class="strong-verde">TODOS LOS 29 DIA DEL ÑOQUI!!!</strong></p>
+        </article>
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">Sandwich</h2>
+            <p><strong>Sand. de Churrasco </strong><strong class="strong-verde">$</strong>1500</p>
+            <p><strong>Sand. de pechuga </strong><strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Sand. de Milanesa simple </strong><strong class="strong-verde">$</strong>900</p>
+            <p><strong>Sand. de Milanesa</strong> (Lechuga y tomate) <strong class="strong-verde">$</strong>1200</p>
+            <p><strong>Sand. de Milanesa</strong> (Lechuga, tomate y huevo) <strong class="strong-verde">$</strong>1300</p>
+            <p><strong>Sand. de Milanesa</strong> (Lechuga, queso y huevo) <strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Sand. de Suprema sola</strong><strong class="strong-verde">$</strong>900</p>
+            <p><strong>Sand. de Suprema </strong> (Lechuga y tomate) <strong class="strong-verde">$</strong>1200</p>
+            <p><strong>Sand. de Suprema </strong> (Jamón, queso y huevo) <strong class="strong-verde">$</strong>1400</p>
+            <p><strong>Sand. de Mila/Suprema Napolitano </strong><strong class="strong-verde">$</strong>1500</p>
+        </article>
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">Guarniciones</h2>
+            <p><strong>Fritas, pure o papas al horno </strong><strong class="strong-verde">$</strong>700</p>
+            <p><strong>Tortilla </strong><strong class="strong-verde">$</strong>1200</p>
+            <p><strong>Tortilla Española </strong><strong class="strong-verde">$</strong>1500</p>
+            <p><strong>Arroz Blanco </strong>(chico) <strong class="strong-verde">$</strong>500</p>
+            <p><strong>Arroz Blanco </strong>(grande) <strong class="strong-verde">$</strong>700</p>
+            <p><strong>Ensalada </strong>(chica, hasta 3 ingredientes) <strong class="strong-verde">$</strong>500</p>
+            <p><strong>Ensalada </strong>(Grande, hasta 3 ingredientes) <strong class="strong-verde">$</strong>600</p>
+            <p><strong>Ensalada </strong>(Grande, hasta 3 ingredientes) <strong class="strong-verde">$</strong>700</p>
         </article>
     </main>
 
@@ -48,16 +93,16 @@
             <p> <strong>Teléfono:</strong> 44541306</p>
         </div>
         <div>
-            <img src="../Imagenes/whatsapp.png" class="footer-img-whatsapp">
-            <p><strong>WhatsApp:</strong> 1140413618</p>
+            <a href="http://api.whatsapp.com/send?phone=5491140413618&text=Hola"><img src="/Imagenes/whatsapp.png" class="footer-img-whatsapp"></a>
+            <p>1140413618</p>
         </div>
         <div>
-            <img src="../Imagenes/instagram.png">
-            <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
+            <a href="http://www.instagram.com/pizzaprontotablada"><img src="/Imagenes/instagram.png"></a>
+            <p>@PizzaProntoTablada</p>
         </div>
         <div>
-            <img src="../Imagenes/google maps.webp" >
-            <p><strong>Dirección:</strong> Bolívar 4282</p>
+            <a href="ubicacion.html"><img src="/Imagenes/google maps.webp"></a>
+            <p >Bolívar 4282</p>
         </div>
         <div class="footer-masa">
             <p>Masa Fresca, Directa al horno!!</p>
