--- a/Secciones/menunoche.html
+++ b/Secciones/menunoche.html
@@ -32,14 +32,40 @@
         </nav>
     </div>
 
-    <main>
-        <article class="menu-img">
-            <h2 class="titulo-gris">Menú Noche</h2>
-            <img src="../Imagenes/MENU PIZZA.jpeg" alt="menú noche">
+    <main class="menu-main">
+        <article class="menu-main-article">
+            <h2 class="menu-titulo"> PIZZAS</h2>
+            <p><strong>Muzzarella</strong>  (salsa de tomate, muzzarela y aceitunas)	                           <strong>$</strong>1800</p>
+            <p><strong>Muzzarella doble</strong>  (sala de tomate, doble capa de muzzarela y aceitunas verdes)  <strong>$</strong>2100</p>
+            <p><strong>Fugazza</strong>   (Cebolla gratinada con provolone)	                                   <strong>$</strong>1500</p>
+            <p><strong>Fugazzetta</strong>  (Fugazza con muzzarella)	                                           <strong>$</strong>2400</p>
+            <p><strong>Fugazzetta con jamón</strong>  (Fugazzetta con jamón)                                     <strong>$</strong>2800</p>
+            <p><strong>Fugazzetta rellena doble</strong>  (muzarella,  jamón, decorada con cebolla tomate y gratinada con provolone) <strong>$</strong>3200</p>
+            <p> <Strong>Mixta</Strong>  (salsa de tomate, media muzzarela y media anchoas)                      <strong>$</strong>2000</p>
+            <p><strong>Anchoas</strong>  (salsa de tomate, anchoas y aceitunas)                                 <strong>$</strong>2400</p>
+            <p><strong>Super anchoas</strong>  (salsa de tomate, tomate en rodajas, anchoas, morrones picados y huevo) <strong>$</strong>2800</p>
+            <p><strong>Al tomate</strong>  (salsa de tomate. muzarella, rodajas de tomate y aceitunas)          <strong>$</strong>2400</p>
+            <p><strong>Calabresa</strong>  (salsa de tomate, muzzarella, longaniza, rodajas de tomate y aceitunas verdes) <strong>$</strong>2800</p>
+            <p><strong>Napolitana</strong>  (salsa de tomate, muzzarella, rod. de tomate, gratinada con morrôn, ajo y perejil) <strong>$</strong>2400</p>
+            <p><strong>Verdura y salsa blanca</strong>  (Espinaca, salsa blanca y aceitunas)                    <strong>$</strong>2600</p>
+            <p><Strong>Jamón y tomate</Strong>  (salsa de tomate, muzzarella, jamon, rodaja de tomate y orégano) <strong>$</strong>2800</p>
+            <p><strong>Jamón y morrones</strong>  (salsa de tomate, muzzarella, jamón, morron, orégano y aceitunas verdes) <strong>$</strong>2800</p>
+            <p><strong>Pronto</strong>  (salsa/tomate. muzzarela. jamón, palmitos, ajies en vinagre, huevo y salsa golf) <strong>$</strong>3500</p>
+            <p><strong>Don Pronto</strong>  (salsa de tomate, muzarela, jamón, longaniza, palmitos, ajies en vinagre, huevo, salsa golf y gratinada al provolone) <strong>$</strong>3700</p>
         </article>
-        <article class="menu-img-mobile">
-            <h2 class="titulo-gris">Menú Noche</h2>
-            <img src="../Imagenes/menunoche-mobile.jpeg" alt= "menú noche" class="menu-img-mobile">
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">EMPANADAS</h2>
+            <p><strong>Jamon y queso - Carne<br>Pollo - Roquefort<br></strong></p>
+            <p>C/U <strong>$</strong>280<br> Docena <strong>$</strong>3360</p>
+        </article>
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">CALZONES</h2>
+            <p><strong>Napolitano - Roquefort - Calabresa <br>Cantimpalo - Jamon y Morrones.</strong><br> <strong class="strong-verde">$</strong>2800</p>
+            <p><strong>Jamon y Anana - Jamon y Palmitos</strong>. <br><strong class="strong-verde">$</strong>2900</p>
+        </article>
+        <article class="menu-main-article">
+            <h2 class="menu-titulo">FAINA</h2>
+            <p>Porcion <Strong>$</Strong>150<br>Entera <strong>$</strong>1200</p>
         </article>
     </main>
 
@@ -48,16 +74,16 @@
             <p> <strong>Teléfono:</strong> 44541306</p>
         </div>
         <div>
-            <img src="../Imagenes/whatsapp.png" class="footer-img-whatsapp">
-            <p><strong>WhatsApp:</strong> 1140413618</p>
+            <a href="http://api.whatsapp.com/send?phone=5491140413618&text=Hola"><img src="/Imagenes/whatsapp.png" class="footer-img-whatsapp"></a>
+            <p>1140413618</p>
         </div>
         <div>
-            <img src="../Imagenes/instagram.png">
-            <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
+            <a href="http://www.instagram.com/pizzaprontotablada"><img src="/Imagenes/instagram.png"></a>
+            <p>@PizzaProntoTablada</p>
         </div>
         <div>
-            <img src="../Imagenes/google maps.webp" >
-            <p><strong>Dirección:</strong> Bolívar 4282</p>
+            <a href="ubicacion.html"><img src="/Imagenes/google maps.webp"></a>
+            <p >Bolívar 4282</p>
         </div>
         <div class="footer-masa">
             <p>Masa Fresca, Directa al horno!!</p>
