--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
             <p> <strong>Teléfono:</strong> 44541306</p>
         </div>
         <div>
-            <img src="./Imagenes/whatsapp.png" class="footer-img-whatsapp">
-            <p><strong>WhatsApp:</strong> 1140413618</p>
+            <a href="http://api.whatsapp.com/send?phone=5491140413618&text=Hola"><img src="./Imagenes/whatsapp.png" class="footer-img-whatsapp"></a>
+            <p>1140413618</p>
         </div>
         <div>
-            <img src="./Imagenes/instagram.png">
-            <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
+            <a href="http://www.instagram.com/pizzaprontotablada"><img src="./Imagenes/instagram.png"></a>
+            <p>@PizzaProntoTablada</p>
         </div>
         <div>
-            <img src="./Imagenes/google maps.webp" >
-            <p><strong>Dirección:</strong> Bolívar 4282</p>
+            <a href="./Secciones/ubicacion.html"><img src="./Imagenes/google maps.webp"></a>
+            <p >Bolívar 4282</p>
         </div>
         <div class="footer-masa">
             <p>Masa Fresca, Directa al horno!!</p>
