--- a/Secciones/informacion.html
+++ b/Secciones/informacion.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Informacion Pizza pronto | Pedidos grandes de comida | Servicio de catering comida pizza empanadas | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
+    <meta name="description"
+        content="Informacion Pizza pronto | Pedidos grandes de comida | Servicio de catering comida pizza empanadas | Delviery Rapido | Pizzas Lomas del Mirador / La Tablada | Empanadas Lomas del mirador / La Tablada | Minutas Lomas del Mirador / La Tablada | Pastas Lomas del Mirador / La Tablada | Comidas Lomas del Mirador / ">
     <title>Pizza Pronto - Informacíon</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -34,7 +35,10 @@
 
     <main class="main-info">
         <div>
-            <p>Durante dos décadas, Pizza Pronto ha deleitado a los amantes de la comida en Lomas del Mirador con su masa fresca y sabrosas creaciones.<br>Esta pizzería icónica también sirve empanadas, hamburguesas, milanesas, pastas, papas fritas y arroz al mediodía. ¡Una parada obligada para los amantes de la comida italiana!</p>
+            <p>Durante dos décadas, Pizza Pronto ha deleitado a los amantes de la comida en Lomas del Mirador con su
+                masa fresca y sabrosas creaciones.<br>Esta pizzería icónica también sirve empanadas, hamburguesas,
+                milanesas, pastas, papas fritas y arroz al mediodía. ¡Una parada obligada para los amantes de la comida
+                italiana!</p>
         </div>
         <div class="main-info-form">
             <div>
@@ -60,16 +64,17 @@
             <p> <strong>Teléfono:</strong> 44541306</p>
         </div>
         <div>
-            <img src="../Imagenes/whatsapp.png" class="footer-img-whatsapp">
-            <p><strong>WhatsApp:</strong> 1140413618</p>
+            <a href="http://api.whatsapp.com/send?phone=5491140413618&text=Hola"><img src="/Imagenes/whatsapp.png"
+                    class="footer-img-whatsapp"></a>
+            <p>1140413618</p>
         </div>
         <div>
-            <img src="../Imagenes/instagram.png">
-            <p><strong>Instagram:</strong> @PizzaProntoTablada</p>
+            <a href="http://www.instagram.com/pizzaprontotablada"><img src="/Imagenes/instagram.png"></a>
+            <p>@PizzaProntoTablada</p>
         </div>
         <div>
-            <img src="../Imagenes/google maps.webp">
-            <p><strong>Dirección:</strong> Bolívar 4282</p>
+            <a href="ubicacion.html"><img src="/Imagenes/google maps.webp"></a>
+            <p>Bolívar 4282</p>
         </div>
         <div class="footer-masa">
             <p>Masa Fresca, Directa al horno!!</p>
