Redimensionado de Imagenes. Finalizo eL proyecto.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header-conjunto">
         <header class="header-titulo">
-            <h1><a href="/index.html">PIZZA <strong class="titulo-color-rojo">PRONTO</strong></a></h1>
+            <h1><a href="index.html">PIZZA <strong class="titulo-color-rojo">PRONTO</strong></a></h1>
 
         </header>
 
@@ -34,14 +34,14 @@
 
     <main class="main-index">
         <section class="card">
-            <img src="./Imagenes/Pizza.webp" alt="Imagen Pizza">
+            <img src="./Imagenes/Pizza.jpg" alt="Imagen Pizza">
             <div>
                 <a class="descripcion" href="./Secciones/menunoche.html">Pizzas</a>
             </div>
         </section>
 
         <section class="card">
-            <img src="./Imagenes/empanadas.avif" alt="Imagen Empanadas">
+            <img src="./Imagenes/empanadas.jpg" alt="Imagen Empanadas">
             <div>
                 <a class="descripcion" href="./Secciones/menunoche.html">Empanadas</a>
             </div>
